# chia_network.nemo1369-vdf-track2

./: .gitignore  CMakeLists.txt  install.sh  readme.md  run.sh
libs/vdf/: CMakeLists.txt
libs/vdf/include/nil/crypto3/vdf/: chia.hpp
libs/vdf/include/nil/crypto3/vdf/algorithm/: compute.hpp
libs/vdf/include/nil/crypto3/vdf/detail/: chia_functions.hpp  chia_policy.hpp
libs/vdf/test/: chia.cpp
src/: main.cpp
